objects/Region__c.object
<CustomObject>
    <description>TCN Region (geographical area)</description>
    <fields>
        <fullName>Description_of_YPPG_travel_time_Wave1_11__c</fullName>
        <description>Sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG for Waves 1 - 11</description>
        <inlineHelpText>Sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG for Waves 1 - 11</inlineHelpText>
        <label>Description of YPPG travel time Wave1-11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_YPPG_travel_time_Wave_12__c</fullName>
        <description>Sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG for Wave 12</description>
        <inlineHelpText>Sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG for Wave 12</inlineHelpText>
        <label>Description of YPPG travel time Wave 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OBS_region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field needs to be checked for the Region to show on the OBS website</description>
        <inlineHelpText>This field needs to be checked for the Region to show on the OBS website</inlineHelpText>
        <label>OBS region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBS_region_description__c</fullName>
        <description>Description of region, for use in OBS when YP/PG selects school</description>
        <label>OBS region description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCD_start_time__c</fullName>
        <description>RCD start time for YP</description>
        <inlineHelpText>RCD start time for YP</inlineHelpText>
        <label>RCD start time YP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_code__c</fullName>
        <description>Unique code for the region</description>
        <inlineHelpText>Unique code for the region</inlineHelpText>
        <label>Region code</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Regional_lead_Programmes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional lead within the Programmes dept</description>
        <inlineHelpText>Regional lead within the Programmes dept</inlineHelpText>
        <label>Regional lead Programmes</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Showcase_end_time__c</fullName>
        <label>Showcase end time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Showcase_start_time__c</fullName>
        <label>Showcase start time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Regions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region_code__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Showcase</fullName>
        <columns>NAME</columns>
        <columns>Showcase_start_time__c</columns>
        <columns>Showcase_end_time__c</columns>
        <columns>RCD_start_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Showcase and RCD</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>